--- a/home.html
+++ b/home.html
@@ -1,1 +1,19 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>UQ LearnX Custom HTML Components</title>
+  </head>
+  <body>
+    <h1>UQ LearnX Custom HTML</h1>
+<p>This page contains a number of customisations built over time for use in LearnX. Click the link in the header of the content type you would like to use to jump to that part of the page, follow the instructions to build your custom component, then click the copy code button and paste it in LearnX where you plan to use the element.</p>
+    <!--Bootstrap JS + Popper for tooltips and popovers-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  </body>
+</html>
 
