--- a/home.html
+++ b/home.html
@@ -10,6 +10,11 @@
     <title>UQ LearnX Custom HTML Components</title>
   </head>
   <body>
+    <div class="page-header">
+        <div class="col-4">
+            <img src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg" class="m-3" />
+        </div>
+    </div>
     <h1>UQ LearnX Custom HTML</h1>
 <p>This page contains a number of customisations built over time for use in LearnX. Click the link in the header of the content type you would like to use to jump to that part of the page, follow the instructions to build your custom component, then click the copy code button and paste it in LearnX where you plan to use the element.</p>
     <!--Bootstrap JS + Popper for tooltips and popovers-->
