--- a/home.html
+++ b/home.html
@@ -4,10 +4,27 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>UQ LearnX Custom HTML Components</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>UQ LearnX Custom HTML Components</title>
+    
+    <style>
+        .page-header,
+        .footer {
+            background: linear-gradient(90deg, #51247a 0%, #56247a 60%, #61257d 80%, #962a8b 100%);
+        }
+       .footer li{
+            color: #d4c8de;
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row;
+            list-style-type: none;
+            margin: 0;
+            padding: 10px;
+            font-size: .875rem;
+        }
+    </style>
   </head>
   <body>
     <div class="page-header">
@@ -17,6 +34,14 @@
     </div>
     <h1>UQ LearnX Custom HTML</h1>
 <p>This page contains a number of customisations built over time for use in LearnX. Click the link in the header of the content type you would like to use to jump to that part of the page, follow the instructions to build your custom component, then click the copy code button and paste it in LearnX where you plan to use the element.</p>
+    <footer class="footer">
+    <ul>
+        <li>© The University of Queensland</li>
+        <li><abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684</li>
+        <li><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a href="https://www.uq.edu.au/about/cricos-link" rel="external" data-gtm-label="CRICOS 00025B">00025B</a></li>
+    </ul>
+</footer>
+    
     <!--Bootstrap JS + Popper for tooltips and popovers-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
