--- a/home.html
+++ b/home.html
@@ -7,13 +7,25 @@
     <title>UQ LearnX Custom HTML Components</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    
+    <!--UQ icon set-->
+    <link href="https://studio.edge.edx.org/static/studio/edx.org-next/css/cms-style-vendor.0bb1c51e34bf.css" rel="stylesheet" type="text/css">
+    <!--jQuery version 3.6.0-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  
     <style>
         .page-header,
         .footer {
             background: linear-gradient(90deg, #51247a 0%, #56247a 60%, #61257d 80%, #962a8b 100%);
         }
+        .footer ul{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: start;
+            flex-direction: row;
+            margin: 0;
+            padding: 0;
+        }
+
        .footer li{
             color: #d4c8de;
             display: flex;
@@ -28,71 +40,102 @@
   </head>
   <body>
     <div class="page-header">
+      <div class="row">
         <div class="col-4">
             <img src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg" class="m-3" />
         </div>
+        <div class="col-8">
+          <h1 style="color:white;">UQ LearnX Custom HTML</h1>
+        </div>
+      </div>
     </div>
-    <div class="container-fluid">
-    <h1>UQ LearnX Custom HTML</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#topOfPage">Top</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#textAccordion">Text Accordion</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dropdown link
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container-fluid mt-2">
+<h2 id="topOfPage">Welcome to the LearnX Customisations Builder</h2>      
 <p>This page contains a number of customisations built over time for use in LearnX. Click the link in the header of the content type you would like to use to jump to that part of the page, follow the instructions to build your custom component, then click the copy code button and paste it in LearnX where you plan to use the element.</p>
-      <h3>Text: Vertical accordion hide and reveal</h3>
+      <h3 id="textAccordion">Text: Vertical accordion hide and reveal</h3>
       <div class="copyDiv">
         <style>
           div.section h4 {
-            margin-bottom: 1.416em;
-            font-size: 1em;
-            color: #3c3c3c;
-            line-height: 1.6em !important;
-            margin-top: 20px;
-            font-weight:bold !important;
-            cursor:pointer;
-          }
-          div.section h4 span {
-            float:left !important;
-            margin-top:4px !important;
-          }
-          p.item {
-            margin-bottom: 1.416em; font-size: 1em; color: #3c3c3c; line-height: 1.6em !important; margin-top: 20px;
-          }
-          </style>
-        <div class="wiki-article" style="color: #3c3c3c; font-family: 'Open Sans', Verdana, Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 25.6000003814697px; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
-          <div class="section">
-            <h4>HEADING 1</h4>
-            <p class="item">TEXT TEXT TEXT OR IMAGES OR WHATEVER</p>
-          </div>
-          <div class="section">
-            <h4>HEADING 2</h4>
-            <p class="item">TEXT TEXT TEXT OR IMAGES OR WHATEVER</p>
-          </div>
-          <div class="section"><h4>HEADING 3</h4>
-            <p class="item">TEXT TEXT TEXT OR IMAGES OR WHATEVER</p>
-          </div>
-        </div>
-        <script>
-          $('document').ready(function() {
-            $('div.section h4').prepend('<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>');
-            fadeOutAll();
-          });
-          $('div.section h4').click(function() {
-            fadeIn = true; if($(this).parent().find('p').css('display') == 'block') { fadeIn = false; } fadeOutAll();
-            if(fadeIn) {
-              $(this).parent().find('p').fadeIn();
-              $(this).parent().find('h4 span').addClass('ui-icon-triangle-1-s');
+              margin-bottom: 1.416em; font-size: 1em; color: #3c3c3c; line-height: 1.6em !important; margin-top: 20px; font-weight:bold !important; cursor:pointer;
             }
-          });
-          function fadeOutAll() {
+           div.section h4 span {
+             float:left !important;
+             margin-top:4px !important;
+           }
+          p.item {
+              margin-bottom: 1.416em; font-size: 1em; color: #3c3c3c; line-height: 1.6em !important; margin-top: 20px;
+           }
+          </style>
+          <div class="wiki-article" style="color: #3c3c3c; font-family: 'Open Sans', Verdana, Arial, Helvetica, sans-serif; font-size: 16px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 25.6000003814697px; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 1; word-spacing: 0px; -webkit-text-stroke-width: 0px;">
+          <div class="section">
+          <h4>HEADING 1</h4>
+          <p class="item">TEXT TEXT TEXT OR IMAGES OR WHATEVER</p>
+          </div>
+          <div class="section">
+          <h4>HEADING 2</h4>
+          <p class="item">TEXT TEXT TEXT OR IMAGES OR WHATEVER</p>
+          </div>
+          </div>
+          <script>
+          $('document').ready(function() {
+             $('div.section h4').prepend('<span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"></span>');
+             fadeOutAll();
+           });
+          $('div.section h4').click(function() {
+           fadeIn = true;
+           if($(this).parent().find('p').css('display') == 'block') {
+            fadeIn = false;
+           }
+           fadeOutAll();
+           if(fadeIn) {
+             $(this).parent().find('p').fadeIn();
+              $(this).parent().find('h4 span').addClass('ui-icon-triangle-1-s');
+           }
+           });
+           function fadeOutAll() {
             $('div.section p').fadeOut(0);
             $('div.section h4 span').addClass('ui-icon-triangle-1-e');
             $('div.section h4 span').removeClass('ui-icon-triangle-1-s');
-          }
-        </script>
+           }
+          </script>
       </div>
     </div>
     <footer class="footer">
     <ul>
         <li>© The University of Queensland</li>
         <li><abbr title="Australian Business Number">ABN</abbr>: 63 942 912 684</li>
-        <li><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr> Provider No: <a href="https://www.uq.edu.au/about/cricos-link" rel="external" data-gtm-label="CRICOS 00025B">00025B</a></li>
+        <li><abbr title="Commonwealth Register of Institutions and Courses for Overseas Students">CRICOS</abbr>&nbsp;Provider No: <a href="https://www.uq.edu.au/about/cricos-link" rel="external" data-gtm-label="CRICOS 00025B">00025B</a></li>
     </ul>
 </footer>
     
