change links in nav

--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
   </head>
   <body>
     <div class="page-header">
-      <div class="row">
+      <div class="row w-100">
         <div class="col-4">
             <img src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg" class="m-3" />
         </div>
@@ -52,17 +52,17 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Elements</a>
+        <a class="navbar-brand" href="home.html">Elements</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#topOfPage">Top</a>
+              <a class="nav-link active" aria-current="page" href="accordions.html">Text Accordion</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#textAccordion">Text Accordion</a>
+              <a class="nav-link" href="https://uqea.github.io/uqlearnx/"></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
