--- a/home.html
+++ b/home.html
@@ -68,12 +68,10 @@
               <a class="nav-link" href="#">Pricing</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown link
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
+              <a class="nav-link dropdown-toggle" href="#" id="textLayoutsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Text Layouts</a>
+              <ul class="dropdown-menu" aria-labelledby="textLayoutsDropdown">
+                <li><a class="dropdown-item" href="accordions.html">Horizontal tabs</a></li>
+                <li><a class="dropdown-item" href="#">Add a mouseover/tooltip</a></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
               </ul>
             </li>
