update uqea ref to uq-itali

--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
               <a class="nav-link active" aria-current="page" href="accordions.html">Text Accordion</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://uqea.github.io/uqlearnx/"></a>
+              <a class="nav-link" href="https://uq-itali.github.io/uqlearnx/"></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Pricing</a>
