--- a/banners.html
+++ b/banners.html
@@ -192,21 +192,21 @@
          <option value="h4">Medium (heading 4)</option>
          <option value="h3">Large (heading 3)</option>
        </select>-->
-       <div class="form-check form-check-inline" id="imgicon1" onchange="generateCode()">
+       <div class="form-check form-check-inline w-25" id="imgicon1" onchange="generateCode()">
          <input class="form-check-input" name="imageIcon" id="imageIcon1" type="radio" value="1" checked>
-         <label class="form-check-label" for="imageIcon1">Img1</label>
+         <label class="form-check-label" for="imageIcon1"><img class="img-fluid" src="img/activities-black.jpeg"></label>
        </div>
        <div class="form-check form-check-inline" id="imgicon2" onchange="generateCode()">
        <input class="form-check-input" name="imageIcon" id="imageIcon2" type="radio" value="2">
-       <label class="form-check-label" for="imageIcon2">Img2</label>
+       <label class="form-check-label" for="imageIcon2"><img class="img-fluid" src="img/book-black.jpeg"></label>
        </div>
        <div class="form-check form-check-inline" id="imgicon3" onchange="generateCode()">
         <input class="form-check-input" name="imageIcon" id="imageIcon3" type="radio" value="3">
-        <label class="form-check-label" for="imageIcon3">Img3</label>
+        <label class="form-check-label" for="imageIcon3"><img class="img-fluid" src="img/explore-black.jpeg"></label>
         </div>
         <div class="form-check form-check-inline" id="imgicon4" onchange="generateCode()">
             <input class="form-check-input" name="imageIcon" id="imageIcon4" type="radio" value="4">
-            <label class="form-check-label" for="imageIcon4">Img4</label>
+            <label class="form-check-label" for="imageIcon4"><img class="img-fluid" src="img/quiz-black.jpeg"></label>
             </div>
    </div>
      </div>
