add relative path links to js + css

--- a/fafreev6search/fontawesome-6.1.1-free-cheatsheet.html
+++ b/fafreev6search/fontawesome-6.1.1-free-cheatsheet.html
@@ -3,10 +3,14 @@
   <head>
     <title>FontAwesome v6 Free Icon Search</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://uq-itali.github.io/uqlearnx/bootstrap-5.2.1-dist/css/bootstrap.css">
-    <script src="https://uq-itali.github.io/uqlearnx/bootstrap-5.2.1-dist/js/bootstrap.bundle.js"></script>
-    <link rel="stylesheet" href="https://uq-itali.github.io/fontawesome-v6.1.1-free/css/all.css">
-    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+    <!--Bootstrap CSS + JS Bundle-->
+    <link rel="stylesheet" href="fafreev6search/bootstrap.css">
+    <script src="fafreev6search/bootstrap.bundle.js"></script>
+    <!--Font Awesome full free library JS + CSS-->
+    <script src="fafreev6search/fa-v6-free-all-js.js"></script>
+    <link rel="stylesheet" href="fafreev6search/fa-v6-free-all-css.css">
+    <!--jQuery-->
+    <script src="fafreev6search/jqueryv3.6.0.js" crossorigin="anonymous"></script>
   </head>
   <body>
 <div class="w-75 mx-auto container-fluid">
