--- a/medi-7100-html.html
+++ b/medi-7100-html.html
@@ -16,66 +16,165 @@
     <link rel="stylesheet" type="text/css" href="https://uq-itali.github.io/uqlearnx/medi7100/bootstrap-5.2.1-dist/css/bootstrap.css" />
     <!-- Bootstrap JS -->
     <script src="copyNextDiv.js" crossorigin="anonymous"></script>
-    <script src="https://uq-itali.github.io/uqlearnx/medi7100/bootstrap-5.2.1-dist/js/bootstrap.bundle.js" crossorigin="anonymous"></script>
+    <!--<script src="https://uq-itali.github.io/uqlearnx/medi7100/bootstrap-5.2.1-dist/js/bootstrap.bundle.js" crossorigin="anonymous"></script>
+    <script src="https://uq-itali.github.io/uqlearnx/medi7100/bootstrap-5.2.1-dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        .dropdown:hover .dropdown-menu{
+            display: block;
+        }
+        .dropdown-menu{
+            margin-top: 0;
+        }
+    </style>
+    <script>
+    $(document).ready(function(){
+        $(".dropdown").hover(function(){
+            var dropdownMenu = $(this).children(".dropdown-menu");
+            if(dropdownMenu.is(":visible")){
+                dropdownMenu.parent().toggleClass("open");
+            }
+        });
+    });     
+    </script>
 </head>
 
 <body>
-    <h1 class="text-bg-uq p-2">UQ MEDI7100 LearnX Custom HTML Components</h1>
-    <!--Blank row with 2 columns-->
-    <h3 class="text-bg-uq p-2" id="blankRow"></h3>
-    <div class="copythis">
-        <div class="row">
-            <div class="col-lg">
-                <p>Text or images or videos here</p>
+    <div class="m-4">
+        <ul class="nav nav-pills" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link active" href="#home" data-bs-toggle="tab">Home</button>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Image combos</a>
+                <ul class="dropdown-menu">
+                    <li><button class="dropdown-item" href="#imgRight" data-bs-toggle="tab">Image right</button></li>
+                    <li><button class="dropdown-item" href="#imgLeft" data-bs-toggle="tab">Image left</button></li>
+                    <li><button class="dropdown-item" href="#imgFloatRight" data-bs-toggle="tab">Image float right</button></li>
+                    <li><button class="dropdown-item" href="#twoImgs" data-bs-toggle="tab">Two Images side by side</button></li>
+                </ul>
+            </li>
+            <!--<li class="nav-item" role="presentation">
+                <button class="nav-link" href="#headings" data-bs-toggle="tab">Headings</button>
+            </li>-->
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Heading combos</a>
+                <ul class="dropdown-menu">
+                    <li><button class="dropdown-item" href="#purpleh2" data-bs-toggle="tab">Purple H2</button></li>
+                    <li><button class="dropdown-item" href="#blueh4" data-bs-toggle="tab">Blue H4</button></li>
+                    <li><button class="dropdown-item" href="#watchh2" data-bs-toggle="tab">Watch H2</button></li>
+                </ul>
+            </li>
+        </ul>
+        <div class="tab-content mt-3">
+            <div class="tab-pane fade show active" id="home" role="tabpanel">
+                <h1 class="text-bg-uq p-2">Welcome to your code centre for MEDI7100</h1>
+                <p>This site is dedicated to the editors of MEDI7100 LearnX sites. These sites have Bootstrap and Font Awesome referenced, and allow for some advanced formatting and icon usage. This can seem tricky and intimidating at first, so this site gives you a range of code snippets used in these sites including headings, use of the grid (aligning images/text/video content side by side), accordions, quotes, buttons and alerts. Use the navigation across the top to find what HTML element you are looking to make. Once you click into a page, you may see 1 or more variations on the element you are creating. Scroll to the one you are looking for, click the button to copy the code underneath the element and follow the below walkthrough on pasting and editing your HTML effectively.</p>
+                <p>Some important things to note:</p>
+                <ul>
+                    <li>All elements here use colours and formatting that align with the style and approach of the MEDI7100 design team. Deviate from them at your own peril! (Only kidding, just get in touch for support and we will likely add your idea to the bunch here if it is a sound idea).</li>
+                    <li>All placeholder images and videos are public links. They will display their content until you delete or replace them.</li>
+                    <li>Currently, we do not have a way of pulling existing content into this site and reformmating it. We are working on it, but it is a complex task.</li>
+                    <li>Elements are only placed here if they are tested and work.</li>
+                    <li>The team have only piloted this in Year 1, 2022. They are still learning about how this all interacts on LearnX, so if you use this code and it goes wrong, and you ask for support, be patient! Perfection takes time, focus and diligence.</li>                                        
+                </ul>
             </div>
-            <div class="col-lg">
-                <p>Text or images or videos here</p>
-            </div>
-        </div>
-    </div>
-
-    <!--2 columns img on right-->
-    <h3 class="text-bg-uq p-2" id="imgRight"></h3>
-    <div class="copythis">
-        <div class="row">
-            <div class="col-lg">
-                <p>This is placeholder text</p>
-            </div>
-            <div class="col-lg">
-                <img class="img-fluid" src="img/PLACEHOLDER.png" alt="" />
-            </div>
-        </div>
-    </div>
-
-    <!--2 columns img on left-->
-    <h3 class="text-bg-uq p-2" id="imgLeft"></h3>
-    <div class="copythis">
-        <div class="row">
-            <div class="col-lg">
-                <img class="img-fluid" src="img/PLACEHOLDER.png" alt="" />
-            </div>
-            <div class="col-lg">
-                <p>This is placeholder text</p>
-            </div>
-        </div>
-    </div>
-
-    <!--img floats right, text wraps around, but then collapses on small devices-->
-    <h3 class="text-bg-uq p-2" id="imgFloatRight"></h3>
-    <div class="copythis">
-        <div class="row">
-            <div class="col-lg">
-                <div class="col-lg-6 float-lg-end">
-                    <img class="img-fluid ms-4" src="img/PLACEHOLDER.png" alt="" />
+            <div class="tab-pane fade" id="imgRight" role="tabpanel">
+                <h3 class="text-bg-uq p-2">Text left/Image right</h3>
+                <div class="copythis">
+                    <div class="row">
+                        <div class="col-lg">
+                            <p>This is placeholder text</p>
+                        </div>
+                        <div class="col-lg">
+                            <img class="img-fluid" src="https://uq-itali.github.io/uqlearnx/img/PLACEHOLDER.png" alt="" />
+                        </div>
                     </div>
-                    <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats.</p>
-                    <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats.</p>
-                    <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats.</p>
-                    <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats.</p>
-                    <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats.</p>
-                    <p>This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats. This is placeholder text to show this image floats.</p>
                 </div>
             </div>
+            <div class="tab-pane fade" id="imgLeft" role="tabpanel">
+                <!--2 columns img on left-->
+                <h3 class="text-bg-uq p-2">Image left/Text right</h3>
+                <div class="copythis">
+                    <div class="row">
+                        <div class="col-lg">
+                            <img class="img-fluid" src="https://uq-itali.github.io/uqlearnx/img/PLACEHOLDER.png" alt="" />
+                        </div>
+                        <div class="col-lg">
+                            <p>This is placeholder text</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="imgFloatRight" role="tabpanel">
+                <h3 class="text-bg-uq p-2">Image float right</h3>
+                <div class="copythis">
+                    <div class="row">
+                        <div class="col-lg">
+                            <div class="col-lg-6 float-lg-end">
+                                <img class="img-fluid ms-4" src="https://uq-itali.github.io/uqlearnx/img/PLACEHOLDER.png" alt="" />
+                            </div>
+                            <p>This is placeholder text to show this image floats. This is placeholder text to show this
+                                image floats. This is placeholder text to show this image floats. This is placeholder text
+                                to show this image floats. This is placeholder text to show this image floats. This is
+                                placeholder text to show this image floats. This is placeholder text to show this image
+                                floats.</p>
+                            <p>This is placeholder text to show this image floats. This is placeholder text to show this
+                                image floats. This is placeholder text to show this image floats. This is placeholder text
+                                to show this image floats. This is placeholder text to show this image floats. This is
+                                placeholder text to show this image floats. This is placeholder text to show this image
+                                floats.</p>
+                            <p>This is placeholder text to show this image floats. This is placeholder text to show this
+                                image floats. This is placeholder text to show this image floats. This is placeholder text
+                                to show this image floats. This is placeholder text to show this image floats. This is
+                                placeholder text to show this image floats. This is placeholder text to show this image
+                                floats.</p>
+                            <p>This is placeholder text to show this image floats. This is placeholder text to show this
+                                image floats. This is placeholder text to show this image floats. This is placeholder text
+                                to show this image floats. This is placeholder text to show this image floats. This is
+                                placeholder text to show this image floats. This is placeholder text to show this image
+                                floats.</p>
+                            <p>This is placeholder text to show this image floats. This is placeholder text to show this
+                                image floats. This is placeholder text to show this image floats. This is placeholder text
+                                to show this image floats. This is placeholder text to show this image floats. This is
+                                placeholder text to show this image floats. This is placeholder text to show this image
+                                floats.</p>
+                            <p>This is placeholder text to show this image floats. This is placeholder text to show this
+                                image floats. This is placeholder text to show this image floats. This is placeholder text
+                                to show this image floats. This is placeholder text to show this image floats. This is
+                                placeholder text to show this image floats. This is placeholder text to show this image
+                                floats.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="twoImgs" role="tabpanel">
+                <h3 class="text-bg-uq p-2">Two images side by side</h3>
+                <div class="copythis">
+                    <div class="row">
+                        <div class="col-lg">
+                            <img class="img-fluid" src="https://uq-itali.github.io/uqlearnx/img/PLACEHOLDER.png" alt="" />
+                        </div>
+                        <div class="col-lg">
+                            <img class="img-fluid" src="https://uq-itali.github.io/uqlearnx/img/PLACEHOLDER.png" alt="" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade" id="purpleh2" role="tabpanel">
+                <div class="copythis">
+                <h2 class="text-bg-uq p-2">Your text here</h2>
+            </div>
+        </div>
+            <div class="tab-pane fade" id="blueh4" role="tabpanel">
+                <div class="copythis">
+                <h4 class="text-bg-info p-2 bg-opacity-25">Your text here</h4>
+            </div>
+            </div>
+            <div class="tab-pane fade" id="watchh2" role="tabpanel">
+                <div class="copythis">
+                <h2 class="text-bg-dark p-2"><i class="fa-brands fa-youtube"></i> Watch</h2></div>
+                </div>
         </div>
     </div>
 </body>
